index for module2-solution

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Module2-solution</title>
 
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body><h1>Main menu</h1>
+<div class="row">
+<div class="cl-lg-1 cl-md-2 cl-sm-1">
+     <h2><div id="red">Beef</div></h2>
+     <p>This text and the papragraph title are non related. This is some random text. Today i found out about a new substance vantablack . If we colour a room completely with this colour then it will produce a blackole type effect cause the density is so high that only a very small portion of light got reflected, and almost all light gets absorbed. </p>
+</div>
+<div class="cl-lg-1 cl-md-2 cl-sm-1">
+	<h2><div id="yellow">Sushi</div> </h2>
+	<p>This text and the papragraph title are non related. This is some random text. Today i found out about a new substance vantablack . If we colour a room completely with this colour then it will produce a blackole type effect cause the density is so high that only a very small portion of light got reflected, and almost all light gets absorbed.</p>
+</div>
+<div id="Chicken" class="cl-lg-1 cl-md-2 cl-sm-1">
+	<h2><div id="pink">Chicken</div></h2>
+	<p >This text and the papragraph title are non related. This is some random text. Today i found out about a new substance vantablack . If we colour a room completely with this colour then it will produce a blackole type effect cause the density is so high that only a very small portion of light got reflected, and almost all light gets absorbed.</p>
+</div>
+</div>
+</body>
+</html>
